--- a/pages/intro.html
+++ b/pages/intro.html
@@ -14,11 +14,11 @@
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
-        <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
-        <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>Crombain Arnaud</dd>
+        <dt>101309</dt>
+        <dd>101309</dd>
+        <dt>1CMO-Aa</dt>
+        <dd>1CMO-Aa</dd>
     </dl>
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
