--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -8,8 +8,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
 </head>
+<style>
+    #container {
+    width: 80%;
+    margin: 0 auto
+    }
+</style>
 <body>
+    <div id="container">
     <h1>Concurrentie analyse</h1>
-    
+    <hr/>
+
+    <h2>NT Gent: Nederlandse Toneel Gent</h2>
+    <h4>Het eerste zicht van de website geeft meteen een professionele indruk,
+        het is een vrij sobere maar toch zeer overduidelijke website.
+        De navigatie bovenaan bestaat uit niet meer dan 5 linkjes en elk zijn ze duidelijk over hun inhoud.
+        De stijl die gebruikt is om de agenda weer te geven vind ik ook leuk gedaan.
+        Er is een zoekmogelijkheid die makkelijk terug te vinden is, ook kan je de taal van de webiste aanpassen.
+        Bij de ticketshop is er ook zeker nagedacht over de usability voor de gebruiker.
+        Verder is alles mooi overzichtelijk en duidelijk te lezen.</h4>
+    <p>https://www.ntgent.be/nl</p>
+
+    <img src="images/ntgent.png"/>
+
+    <h2>Opendoek</h2>
+    <h4>Mooie opbouw van de website en mooi combinatie gebruik van fonts en beelden.
+        Navigatiebalk vind ik te druk/ingewikkeld, er staan 11 pagina-linken wat ikzelf teveel vind.
+        Boven de navigatie is er dan nog eens een nav met teveel links.
+        De filter voor de agenda is zeer handig en het overzicht met de voorstellingen is ook goed duidelijk.
+        Tickets kun je niet kopen via de website maar een zoekfunctie is er wel.
+        Indien je de site verkleind wordt de nav een dropdown menu, wat wel goed is,
+        maar die is ook weer veel te druk met teveel linkjes.
+    </h4>
+    <p>https://www.opendoek.be</p>
+
+    <img style="width: 50%" src="images/opendoek.png"/> <img style="width: 50%; float: right; margin-top:50px;" src="images/dropdownmenu.png"/>
+    <br/><br/>
+    <img style="width: 50%" src="images/opendoek2.png"/>
+
+    <hr/>
+
+    <h2>Tinnenpot Gent</h2>
+    <h4>Een heel grijze, saaie website. De navigatie heeft niet veel opmaak en nodigd niet erg uit om te lezen.
+        De nav heeft wel niet teveel linkjes, ze heeft ook een submenu als je er over hovert.
+        Er staan heel veel blokteksten en  niet veel afbeeldingen. De zoekfunctie is minimalistisch qua opmaak, maar valt wel direct goed op.
+        tickets kopen gaat niet maar je kan wel makkelijk de zaal huren.
+
+    </h4>
+    <p>http://www.tinnenpot.be/</p>
+
+    <img src="images/tinnenpot.png"/>
+</div>
 </body>
 </html>
