--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Jeugtejater</h2>
 
     <dl class="info">
-        <dt>Naam</dt>
+        <dt>Jeugtejater</dt>
         <dd>Crombain Arnaud</dd>
         <dt>101309</dt>
         <dd>101309</dd>
@@ -21,10 +21,21 @@
         <dd>1CMO-Aa</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[101309]">Mijn opdracht</a>
     </p>
     
-    <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <h1>Jeugtejater</h1>
+    <p>Het ‘Jeugtejater’ maakt theater voor jongeren over maatschappelijke relevante thema’s. De voorstellingen moedigen aan om kritisch te denken en een eigen mening vormen. 
+        We richten ons op de inhoudelijke en artistieke kwaliteit van onze voorstellingen. Daarbij gaan we steeds de uitdaging aan om op zoek te gaan naar nieuwe vormen, 
+        onverwachte invalshoeken en een creatieve manier om het publiek nog meer te betrekken. Onze focus ligt op de humor ondanks er toch ernstige onderwerpen zijn.
+        We willen geslaagd theater maken dat voor iedereen toegankelijk is. Of je nu wekelijks in het theater zit of het je eerste keer is, we proberen om altijd jouw taal te spreken!
+        Omdat het theater als doelgroep jongeren heeft trachten we de laagste prijs aan te bieden voor hun. Een avondje uit moet toch helemaal niet duur worden? 
+        Op voorleg van studentenkaarten geven wij een korting van 20% en als je de 10-beurten kaart koopt komt dit nog goedkoper uit!
+        De voorstelling die nu je nu kunt zien zijn: “F-f-f faalangsten?”, “Virtueel verslaafd” & “Doper”.
+        Al deze voorstellingen kun je de hele maand door zien bij ons. Ze hebben allemaal een centrale boodschap die de jong volwassen op weg helpen bij hun verder leven. 
+        Ze worden minimalistisch maar nieuwsgierig beschreven op de website van ons theater.
+        Ook kom je wat informatie te weten over het theater zelf & over de voorstellingen.
+        De website gebruikt interactieve manieren om de bezoekers volledig te overtuigen om eens lang te komen & hun favoriete voorstelling te komen bekijken.
+        Het Jeugtejater wil het theater naar de jongeren brengen en niet de jongeren naar het theater.</p>
 </body>
 </html>
