--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -8,7 +8,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
 </head>
+<style>
+    #container {
+    width: 80%;
+    margin: 0 auto
+    }
+</style>
 <body>
+    <div id="container">
     <h1>Scenario's</h1>
+    <hr/>
+    <h2>Jochen 19 jaar</h2>
+    <h4>Jochen gaat liever naar theatervoorstellingen dan
+        naar de film te gaan, hij is student en wilt toch
+        voordelig genieten van zijn stuk. Hij bezoekt de website
+        om te weten welke stukken er gespeeld worden en hoeveel deze kosten.
+        In slechts enkele klikken komt hij al deze informatie te weten 
+        op een overzichtelijke manier.
+    </h4>
+    <hr/>
+    <h2>Lien 16 jaar</h2>
+    <h4>Ze gaat met haar klas een voorstelling gaan kijken over
+        problemen bij jongeren en wat daarbij doen. Ze is al nieuwsgierig
+        over wat het zal gaan en beslist toch al eens een kijkje te gaan
+        nemen op de website. Deze geeft een korte maar leuke beschrijving
+        waarover het stuk zal gaan.
+    </h4>
+    <hr/>
+    <h2>Senne 22 jaar</h2>
+    <h4>Senne wilt eens wat anders doen dan zijn normale activiteiten
+        en beslist daarom om eens naar een theaterstuk te gaan kijken.
+        Hij heeft dit nog nooit gedaan en weet niet wat hem te wachten staat,
+        om niet helemaal uit de boom te vallen gaat hij toch al eens kijken
+        naar de website zodat hij weet wat hem te wachten staat.
+        Hij vindt op de website makkelijk terug hoe alles in zijn werk gaat
+        en wat hij allemaal moet doen.
+    </h4>
+   
+    <hr/>
+    <h2>Germain 25 jaar</h2>
+    <h4>Germain is franstalig, hij kan een beetje nederlands maar niet 
+        genoeg om hele theaterstukken te volgen. Hij wilt op de website teweten komen
+        of er ook franse stukken te zien zijn. De website is vertaald waardoor hij dit 
+        allemaal in zijn eigen taal te weten kan komen.
+    </h4>
+</div>
 </body>
 </html>
