--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -7,8 +7,35 @@
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
+    <style>
+    @font-face{
+        font-family: Titel1;
+        src:url(fonts/Titel1.ttf);
+    }
+
+    @font-face {
+	font-family:font2;
+	src:url(../fonts/ptsans.ttc);
+    }
+    
+    @font-face {
+	font-family:font3;
+	src:url(../fonts/Agency.ttf);
+	}
+    </style>
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+    <img style="width: 100%;" src="images/kkk.jpg" alt="bannerfoto">
+    <h1 style="font-family:Titel1;">Dit is een voorbeeld van een Hoofdtitel.<h6>Champagne - Limousines font</h6> </h1>
+    <h2 style="font-family:font3;">Dit is een voorbeeld van eeb subtitel en een beetje extra tekst.</h2>
+    <p style="font-family:font2;">Het ‘Jeugtejater’ maakt theater voor jongeren over maatschappelijke relevante thema’s. De voorstellingen moedigen aan om kritisch te denken en een eigen mening vormen. 
+        We richten ons op de inhoudelijke en artistieke kwaliteit van onze voorstellingen. Daarbij gaan we steeds de uitdaging aan om op zoek te gaan naar nieuwe vormen, 
+        onverwachte invalshoeken en een creatieve manier om het publiek nog meer te betrekken. Onze focus ligt op de humor ondanks er toch ernstige onderwerpen zijn.
+        We willen geslaagd theater maken dat voor iedereen toegankelijk is. Of je nu wekelijks in het theater zit of het je eerste keer is, we proberen om altijd jouw taal te spreken!
+        Omdat het theater als doelgroep jongeren heeft trachten we de laagste prijs aan te bieden voor hun. Een avondje uit moet toch helemaal niet duur worden? 
+        Op voorleg van studentenkaarten geven wij een korting van 20% en als je de 10-beurten kaart koopt komt dit nog goedkoper uit!
+        De website gebruikt interactieve manieren om de bezoekers volledig te overtuigen om eens lang te komen & hun favoriete voorstelling te komen bekijken.
+        Het Jeugtejater wil het theater naar de jongeren brengen en niet de jongeren naar het theater.</p>
 </body>
 </html>
