--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="pages/visual-designs.pdf" target="content" class="link">Visual Designs</a>
         <h3>Develop</h3>
         <a href="pages/styleguide.html" target="content" class="link">Digital Styleguide</a>
+        <a href="pages/website/index.html" target="_blank" class="link">Website</a>
     </nav>
 
     <section>
